# CnC_Generals_Zero_Hour_NextGen_Multiplayer

./: .gitignore  README.MD  commandline.txt
Code/: CMakeLists.txt  RTS.sln  RTS.vcproj  RTS.vcxproj
Code/GameEngine/: CMakeLists.txt  GameEngine.vcproj  GameEngine.vcxproj
Code/GameEngine/Include/Common/: ArchiveFileSystem.h  AudioEventInfo.h  AudioRandomValue.h  BezierSegment.h  BorderColors.h  DataChunk.h  Debug.h  FileSystemEA.h  GameAudio.h  GameCommon.h  GameEngine.h  GameLOD.h  GameMemory.h  GameType.h  GlobalData.h  LadderPreferences.h  LocalFileSystem.h  Player.h  STLTypedefs.h  SparseMatchFinder.h  StackDump.h  Team.h  TerrainTypes.h  ThingSort.h  ThingTemplate.h  UnicodeString.h  Upgrade.h  file.h
Code/GameEngine/Include/GameClient/: Anim2D.h  AnimateWindowManager.h  ClientRandomValue.h  CommandXlat.h  ControlBarScheme.h  DebugDisplay.h  DisconnectMenu.h  Display.h  Drawable.h  EstablishConnectionsMenu.h  GameClient.h  GameWindow.h  GameWindowManager.h  GameWindowTransitions.h  MessageBox.h  ParticleSys.h  ProcessAnimateWindow.h  ShellHooks.h  TerrainVisual.h  WindowVideoManager.h
Code/GameEngine/Include/GameLogic/: AI.h  AIPathfind.h  GameLogic.h  LogicRandomValue.h  Object.h  PartitionManager.h  Powers.h  WeaponSet.h
Code/GameEngine/Include/GameNetwork/: ConnectionManager.h  GameSpyOverlay.h  Transport.h  UDPTransport.h
Code/GameEngine/Source/Common/: CRCDebug.cpp  CommandLine.cpp  GameEngine.cpp  GameLOD.cpp  GlobalData.cpp  MessageStream.cpp  RandomValue.cpp  Recorder.cpp  StatsCollector.cpp  UserPreferences.cpp
Code/GameEngine/Source/Console/: Console.cpp  Console.h  ConsoleCommandManager.cpp  ConsoleCommandManager.h  Cvar.cpp  Cvar.h  CvarManager.cpp  CvarManager.h
Code/GameEngine/Source/GameClient/: Drawable.cpp  GameClient.cpp  GameText.cpp  GlobalLanguage.cpp  InGameUI.cpp  LanguageFilter.cpp  MapUtil.cpp  SelectionInfo.cpp
Code/GameEngine/Source/GameNetwork/: ConnectionManager.cpp  FirewallHelper.cpp  FrameMetrics.cpp  GUIUtil.cpp  GameInfo.cpp  GameSpyOverlay.cpp  LANAPI.cpp  LANAPICallbacks.cpp  NAT.cpp  NetPacket.cpp  Transport.cpp  UDPTransport.cpp  udp.cpp
Code/GameEngine/Source/Precompiled/: PreRTS.h
Code/GameEngineDevice/: CMakeLists.txt  GameEngineDevice.vcproj  GameEngineDevice.vcxproj
Code/GameEngineDevice/Include/MilesAudioDevice/: MilesAudioManager.h
Code/GameEngineDevice/Include/OpenALAudioDevice/: OpenALAudioLoader.h  OpenALAudioManager.h  dr_mp3.h  dr_wav.h
Code/GameEngineDevice/Source/MilesAudioDevice/: MilesAudioCache.cpp  MilesAudioManager.cpp
Code/GameEngineDevice/Source/OpenALAudioDevice/: OpenALAudioLoader.cpp  OpenALAudioManager.cpp  OpenALDriver.cpp
Code/GameRenderer/: CMakeLists.txt  GameRenderer.h  GameRenderer.vcxproj
Code/GameRenderer/dx12/: dx12postprocess.cpp  tinydx.cpp  tinydx.h
Code/GameRenderer/dx8/: dx8caps.cpp  dx8caps.h  dx8fvf.cpp  dx8fvf.h  dx8indexbuffer.cpp  dx8renderer.cpp  dx8renderer.h  dx8rendertarget.cpp  dx8rendertarget.h  dx8texman.cpp  dx8timer.cpp  dx8vertexbuffer.cpp  dx8vertexbuffer.h  dx8webbrowser.cpp  dx8webbrowser.h  dx8wrapper.cpp  dx8wrapper.h
Code/GameRenderer/imgui/: imgui_impl_win32.cpp
Code/Libraries/Bink/include/: bink.c  bink.h  cleanup.c  miles.c  miles.def  mss.h
Code/Libraries/D3D12TranslationLayer/: CMakeLists.txt  CONTRIBUTING.md  README.md
Code/Libraries/D3D12TranslationLayer/DxbcParser/: CMakeLists.txt
Code/Libraries/D3D12TranslationLayer/include/: Allocator.h  BatchedContext.hpp  BatchedQuery.hpp  BatchedResource.hpp  BlitHelper.hpp  BlitHelperShaders.h  BlockAllocators.h  BlockAllocators.inl  CommandListManager.hpp  D3D12TranslationLayerDependencyIncludes.h  D3D12TranslationLayerIncludes.h  DXGIColorSpaceHelper.h  DeviceChild.hpp  DxbcBuilder.hpp  Fence.hpp  FormatDesc.hpp  ImmediateContext.hpp  ImmediateContext.inl  MaxFrameLatencyHelper.hpp  PipelineState.hpp  PrecompiledShaders.h  Query.hpp  Residency.h  Resource.hpp  ResourceBinding.hpp  ResourceCache.hpp  ResourceState.hpp  RootSignature.hpp  Sampler.hpp  Sampler.inl  Shader.hpp  Shader.inl  ShaderBinary.h  SharedResourceHelpers.hpp  SubresourceHelpers.hpp  SwapChainHelper.hpp  SwapChainManager.hpp  ThreadPool.hpp  Util.hpp  VideoDecode.hpp  (+12 more)
Code/Libraries/D3D12TranslationLayer/scripts/: BlitHelperShaders.hlsl  CompileBlitHelperShaders.cmd  CompileVideoProcessShaders.cmd  DeinterlaceShader.hlsl
Code/Libraries/D3D12TranslationLayer/src/: Allocator.cpp  BatchedContext.cpp  BlitHelper.cpp  CMakeLists.txt  ColorConvertHelper.cpp  CommandListManager.cpp  DeviceChild.cpp  DxbcBuilder.cpp  Fence.cpp  FormatDescImpl.cpp  ImmediateContext.cpp  Main.cpp  MaxFrameLatencyHelper.cpp  PipelineState.cpp  Query.cpp  Residency.cpp  Resource.cpp  ResourceBinding.cpp  ResourceCache.cpp  ResourceState.cpp  RootSignature.cpp  Shader.cpp  (+14 more)
Code/Libraries/d3d9on12/: CMakeLists.txt  DirectX-Direct3D9on12.man  README.md  packages.config
Code/Main/: RTS.RC  WinMain.cpp
Code/NextGenMP/: NGMP_OnlineServices_Init.cpp  NGMP_OnlineServices_Init.h
Code/NextGenMPShared/: NextGenMP_defines.h
Code/Tools/Babylon/: noxstring.rc
Code/Tools/Compress/: Compress.vcproj  Compress.vcxproj
Code/Tools/DebugWindow/: CMakeLists.txt  DebugWindow.rc  DebugWindow.vcproj  DebugWindow.vcxproj  DebugWindowDialog.cpp
Code/Tools/GUIEdit/: CMakeLists.txt  GUIEdit.vcproj  GUIEdit.vcxproj
Code/Tools/ImagePacker/: ImagePacker.vcproj  ImagePacker.vcxproj
Code/Tools/Launcher/: launcher.vcproj  launcher.vcxproj  streamer.cpp  streamer.h  wdebug.h
Code/Tools/MapCacheBuilder/: MapCacheBuilder.vcproj  MapCacheBuilder.vcxproj
Code/Tools/PATCHGET/: SCRIPT1.RC
Code/Tools/ParticleEditor/: CMakeLists.txt  MoreParmsDialog.cpp  ParticleEditor.rc  ParticleEditor.vcproj  ParticleEditor.vcxproj  ParticleTypePanels.cpp
Code/Tools/WorldBuilder/: CMakeLists.txt  WorldBuilder.vcproj  WorldBuilder.vcxproj
Code/Tools/buildVersionUpdate/: buildVersionUpdate.vcproj  buildVersionUpdate.vcxproj
Code/Tools/textureCompress/: textureCompress.vcproj  textureCompress.vcxproj
Code/Tools/versionUpdate/: versionUpdate.vcproj  versionUpdate.vcxproj
(+1159 files in other folders)
